--- a/my-quiz/package.json
+++ b/my-quiz/package.json
@@ -6,12 +6,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.0",
+    "firebase": "^7.14.6",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.8",
+    "react-typing-animation": "^1.6.2",
+    "react-typing-effect": "^2.0.3",
     "redux": "^4.0.5"
   },
   "scripts": {
