--- a/my-quiz/package.json
+++ b/my-quiz/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
+    "dotenv": "^8.2.0",
     "firebase": "^7.14.6",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -17,6 +18,7 @@
     "react-scripts": "^2.1.8",
     "react-typing-animation": "^1.6.2",
     "react-typing-effect": "^2.0.3",
+    "recompose": "^0.30.0",
     "redux": "^4.0.5"
   },
   "scripts": {
